# uniduc_robo_manipulator

./: .gitignore  README.md  install_dev_dependencies.sh  setup_dev_environment.sh
automata/: Dockerfile  arduino_simulator.sh  install_dependencies.sh  pyproject.toml  requirements.txt  ros_docker.sh  service.py
automata/src/automata/: service.py
client/: sample_requests.rest
client/prototype_sketch/: App screens - 20210103.fig  App screens - 20210105.fig  App screens.fig  Illustrations.fig  Styles.fig
docs/: automata_service.md  management_hub.md
hub/: config.py  hub.py  install_dependencies.sh  nginx.conf  pyproject.toml
hub/api/: automata.py  errors.py
hub/src/: .env.sample  config.py  hub.py
hub/src/app/: __init__.py  models.py
hub/src/app/api_0_1/: __init__.py  authentication.py  automata.py  errors.py
hub/src/hub/: hub.py
hub/src/hub/api/: __init__.py  automata.py
