[tool.poetry]
name = "automata"
version = "0.1.0"
description = "Service for controlling robot via central hub or direct control"
authors = ["Duc Vu Truong <vu.truong.16193@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
python-socketio = {extras = ["client"], version = "*"}
requests = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
serve = "automata.service:serve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
